[tool.poetry]
name = "nonebot_plugin_rauthman"
version = "2.0.0-beta.2"
description = "Rule-based authorization manager worked with nonebot2"
authors = ["Lancercmd <lancercmd@gmail.com>"]
license = "GPLv3"
readme = "README.rst"
repository = "https://github.com/Lancercmd/nonebot_plugin_rauthman"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
ujson = ">=4.0.2,<6.0.0"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
