[tool.poetry]
name = "nonebot_plugin_rauthman"
version = "2.0.0rc1.post3"
description = "Rule-based authorization manager worked with nonebot2"
authors = ["Lancercmd <lancercmd@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/Lancercmd/nonebot_plugin_rauthman"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = {version = "^2.0.0rc1", extras = ["fastapi"]}
nonebot-adapter-onebot = "^2.1.3"
ujson = ">=4.0.2,<6.0.0"
nonebot-plugin-apscheduler = ">=0.2,<0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
